[build-system]
requires = [
    "setuptools >= 64.0.0",
    "setuptools_scm >= 6.4.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "rnanorm"
description = "Common RNAseq normalization methods"
authors = [
    {name = "Genialis, Inc."},
    {email = "dev-team@genialis.com"},
]
dynamic = ["version"]
readme = "README.rst"
license = {text = "Proprietary"}
requires-python = ">=3.8, <3.11"
keywords = [
    "bio",
    "bioinformatics",
    "data science",
    "machine learning",
    "artificial intelligence",
    "python",
    "genialis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy >= 1.0.0",
    "pandas >= 1.0.0",
    "scikit-learn >= 1.0.0",
    "pandera",
]

[project.optional-dependencies]
docs = [
    "sphinx>=5.1.1",
    "sphinx-autodoc-typehints>=1.19.2",
]
package = [
    "build>=0.8.0",
    "check-manifest>=0.48",
    "twine>=4.0.1",  # Required by tox -e packaging
]
test = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "pydocstyle[toml]",
    "pytest",
    "pytest-cov",
]

[project.urls]
repository = "https://github.com/genialis/RNAnorm"

[tool.setuptools_scm]

[tool.black]
target-version = ["py38", "py39", "py310"]
line-length = 99

[tool.isort]
profile = "black"

[tool.pydocstyle]
add-select = "D404"
add-ignore = "D202"
